Improve ShopVerse commerce workflows and observability